--- a/permohonan.html
+++ b/permohonan.html
@@ -360,13 +360,25 @@
                         <div class="tab-content" id="add-product-pills-tabContent">
                           <div class="tab-pane fade show active" id="detail-product" role="tabpanel" aria-labelledby="detail-product-tab">
                             <div class="sidebar-body">
-                              <form class="row g-2">
-                                <label class="col-12 m-0 form-label" for="productTitle1">Product Title <span class="txt-danger"> *</span>
+                              <form class="row g-2" style="margin-bottom:100px">
+                                <div class="col-md-12"> 
+                                <label class="col-md-12 form-label" for="productTitle1">Jenis Pinjaman <span class="txt-danger"> *</span>
                                   <select class="form-select">
                                     <option value="AL" selected>Persendirian</option>
                                     <option value="WY">Kenderaan</option>
                                   </select>
                                 </label>
+                                </div>
+                                <div class="col-md-12">
+                                  <label class="col-md-12 form-label" for="productTitle1">Tempoh Pinjaman <span class="txt-danger"> *</span>
+                                    <select class="form-select">
+                                      <option value="AL" selected>12 Bulan</option>
+                                      <option value="WY">24 Bulan</option>
+                                      <option value="WY">36 Bulan</option>
+                                    </select>
+                                  </label>
+                                </div>
+                               
                               </form>
                               <div class="product-buttons">
                                 <div class="btn">
