--- a/sign-up.html
+++ b/sign-up.html
@@ -39,7 +39,7 @@
         <div class="col-12 p-0">    
           <div class="login-card login-dark">
             <div>
-              <div><a class="logo" href="dashboard.html"><img class="img-fluid for-light" src="./assets/images/logo/logo.png" alt="looginpage"><img class="img-fluid for-dark" src="./assets/images/logo/logo_dark.png" alt="looginpage"></a></div>
+              <div><a class="logo" href="dashboard.html"><img class="img-fluid for-light" src="./assets/images/logo/you-logo-here.png" alt="looginpage"><img class="img-fluid for-dark" src="./assets/images/logo/logo_dark.png" alt="looginpage"></a></div>
               <div class="login-main"> 
                 <form class="theme-form" >
                   <h4>Create your account</h4>
@@ -74,10 +74,10 @@
                     <!--  <button class="btn btn-primary btn-block w-100" type="submit">Create Account</button>-->
                     <a class="btn btn-primary btn-block w-100" href="login.html">Register</a>
                   </div>
-                  <h6 class="text-muted mt-4 or">Or signup with</h6>
+                  <!-- <h6 class="text-muted mt-4 or">Or signup with</h6>
                   <div class="social mt-4">
                     <div class="btn-showcase"><a class="btn btn-light" href="https://www.linkedin.com/login" target="_blank"><i class="txt-linkedin" data-feather="linkedin"></i> LinkedIn </a><a class="btn btn-light" href="https://twitter.com/login?lang=en" target="_blank"><i class="txt-twitter" data-feather="twitter"></i>twitter</a><a class="btn btn-light" href="https://www.facebook.com/" target="_blank"><i class="txt-fb" data-feather="facebook"></i>facebook</a></div>
-                  </div>
+                  </div> -->
                   <p class="mt-4 mb-0">Already have an account?<a class="ms-2" href="login.html">Sign in</a></p>
                 </form>
               </div>
