--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col-12 p-0">    
           <div class="login-card login-dark">
             <div>
-              <div><a class="logo" href="dashboard.html"><img class="img-fluid for-light" src="./assets/images/logo/logo.png" alt="looginpage"><img class="img-fluid for-dark" src="./assets/images/logo/logo_dark.png" alt="looginpage"></a></div>
+              <div><a class="logo" href="dashboard.html"><img class="img-fluid for-light" src="./assets/images/logo/you-logo-here.png" alt="looginpage"><img class="img-fluid for-dark" src="./assets/images/logo/logo_dark.png" alt="looginpage"></a></div>
               <div class="login-main"> 
                 <form class="theme-form">
                   <h4>Sign in to account</h4>
@@ -67,7 +67,8 @@
                   </div>
                   <h6 class="text-muted mt-4 or">Or Sign in with</h6>
                   <div class="social mt-4">
-                    <div class="btn-showcase"><a class="btn btn-light" href="https://www.linkedin.com/login" target="_blank"><i class="txt-linkedin" data-feather="linkedin"></i> LinkedIn </a><a class="btn btn-light" href="https://twitter.com/login?lang=en" target="_blank"><i class="txt-twitter" data-feather="twitter"></i>twitter</a><a class="btn btn-light" href="https://www.facebook.com/" target="_blank"><i class="txt-fb" data-feather="facebook"></i>facebook</a></div>
+                    <a class="btn btn-dark btn-block w-100" href="dashboard.html">SSO</a>
+                    <!-- <div class="btn-showcase"><a class="btn btn-light" href="https://www.linkedin.com/login" target="_blank"><i class="txt-linkedin" data-feather="linkedin"></i> LinkedIn </a><a class="btn btn-light" href="https://twitter.com/login?lang=en" target="_blank"><i class="txt-twitter" data-feather="twitter"></i>twitter</a><a class="btn btn-light" href="https://www.facebook.com/" target="_blank"><i class="txt-fb" data-feather="facebook"></i>facebook</a></div> -->
                   </div>
                   <p class="mt-4 mb-0 text-center">Don't have account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
                 </form>
