--- a/jadual.html
+++ b/jadual.html
@@ -70,7 +70,7 @@
             </div>
           </form>
           <div class="header-logo-wrapper col-auto p-0">
-            <div class="logo-wrapper"><a href="dashboard.html"><img class="img-fluid" src="./assets/images/logo/logo.png" alt=""></a></div>
+            <div class="logo-wrapper"><a href="dashboard.html"><img class="img-fluid" src="./assets/images/logo/you-logo-here.png" alt=""></a></div>
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="align-center"></i></div>
           </div>
           <div class="left-header col-xxl-5 col-xl-6 col-lg-5 col-md-4 col-sm-3 p-0">
@@ -168,7 +168,7 @@
       <div class="sidebar-wrapper" sidebar-layout="stroke-svg">
         <div>
           <div class="logo-wrapper"><a href="dashboard.html"><img class="img-fluid for-light"
-                src="./assets/images/logo/logo.png" alt=""><img class="img-fluid for-dark"
+                src="./assets/images/logo/you-logo-here.png" alt=""><img class="img-fluid for-dark"
                 src="./assets/images/logo/logo_dark.png" alt=""></a>
             <div class="back-btn"><i class="fa fa-angle-left"></i></div>
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
@@ -191,7 +191,7 @@
                 </li>
                 <li class="sidebar-main-title">
                   <div>
-                    <h6 class="lan-1">Utama</h6>
+                    <h6 >Utama</h6>
                   </div>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title link-nav"
@@ -240,7 +240,7 @@
 
                 <li class="sidebar-main-title">
                   <div>
-                    <h6 class="lan-1">Pengguna</h6>
+                    <h6 >Pengguna</h6>
                   </div>
                 </li>
                 <li class="sidebar-list"><a class="sidebar-link sidebar-title link-nav"
